remove possibility to upload banner img

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -23,9 +23,8 @@
         </div>
 
         <div class="mb-3">
-          <label>Add your profile pic and your banner:</label>
-          <input name="profile-images" type="file" class="file" data-show-upload="true" data-show-caption="true"
-            multiple>
+          <label>Add your profile pic:</label>
+          <input name="profile-pic" type="file" class="file" data-show-caption="true">
         </div>
 
         <div class="text-center">
