changed landing page description

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,14 +19,12 @@
         <div class="col-lg-8">
             <h2>About Us</h2>
             <p>
-                Bytes &amp; Dungeons is the premier online platform for players and Dungeon Masters to connect, organize
-                and
-                run Dungeons &amp; Dragons campaigns.
+                Bytes &amp; Dungeons is a online platform for players to connect, discuss and share information about
+                Dungeons &amp; Dragons characters.
             </p>
             <p>
-                Our intuitive user interface and powerful tools allow you to manage your characters, maps, encounters,
-                and
-                more with ease.
+                Our intuitive user interface and powerful tools allow you to manage your characters, and play games with
+                them.
             </p>
         </div>
         <div class="col-lg-4">
