--- a/views/characters/character-upgrade.hbs
+++ b/views/characters/character-upgrade.hbs
@@ -1,9 +1,9 @@
-<h1 class="text-center mb-5">Edit your Character ✏️</h1>
+<h1 class="text-center mb-5">Upgrade your Character ✏️</h1>
 
 <div class="container text-center">
     <div class="row">
         <div class="col-6">
-            <h3>{{character.name}}</h3>
+            <h3>{{character.name}} Level {{character.level}}</h3>
             <p>{{character.description}}</p>
         </div>
         <div class="col-6">
