Format code + minor visual tweaks + CODE FREEZE
Co-authored-by: Ismael Freitas <IsmaelFreitas98@users.noreply.github.com>

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -219,4 +219,9 @@ wavy-bg {
   .jumbotron p {
     font-size: 20px;
   }
+
+  #charDetailsStatsBig {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
